# Flutter-vs-React-Native-vs-Qt

./: .gitignore  README.md
benchmarks/animations/QtAnimations/: CMakeLists.txt  main.cpp  main.qml
benchmarks/animations/ReactNativeAnimations/: App.js  package-lock.json  package.json
benchmarks/animations/ReactNativeAnimations/android/: settings.gradle
benchmarks/animations/ReactNativeAnimations/android/app/: _BUCK  build.gradle
benchmarks/animations/ReactNativeAnimations/ios/: Podfile
benchmarks/animations/flutter_animations/: pubspec.yaml
benchmarks/animations/flutter_animations/lib/: main.dart
to-do-lists/QtToDoList/: CMakeLists.txt  InputSection.qml  RestApiClient.cpp  RestApiClient.h  Task.qml  TasksModel.cpp  TasksModel.h  main.cpp  main.qml
to-do-lists/ReactNativeToDoList/: App.js  app.json  package-lock.json  package.json
to-do-lists/ReactNativeToDoList/components/: InputSection.js  Task.js
to-do-lists/flutter_to_do_list/: pubspec.yaml
to-do-lists/flutter_to_do_list/android/app/: build.gradle
to-do-lists/flutter_to_do_list/ios/Runner/: Info.plist
to-do-lists/flutter_to_do_list/ios/Runner.xcodeproj/: project.pbxproj
to-do-lists/flutter_to_do_list/lib/: input_section.dart  main.dart  task.dart  task_widget.dart
to-do-lists/flutter_to_do_list/linux/: CMakeLists.txt
to-do-lists/flutter_to_do_list/macos/Runner.xcodeproj/: project.pbxproj
to-do-lists/flutter_to_do_list/web/: index.html
to-do-lists/flutter_to_do_list/windows/: CMakeLists.txt
to-do-lists/flutter_to_do_list/windows/runner/: Runner.rc  main.cpp
(+20 files in other folders)
